[gd_scene load_steps=4 format=2]

[ext_resource path="res://star/star.gd" type="Script" id=1]
[ext_resource path="res://ui/tooltip/tooltip.tscn" type="PackedScene" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 512.0

[node name="Star" type="Area2D" groups=["radar_objects"]]
script = ExtResource( 1 )
type = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="ToolTip" parent="UI" instance=ExtResource( 2 )]
margin_left = -378.0
margin_right = -298.0

[connection signal="mouse_entered" from="." to="." method="_on_Star_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Star_mouse_exited"]
